# bungeegum

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  em.bat  libuiwidget.md  serv.bat
bungeegum/: CMakeLists.txt  README.md
bungeegum/include/bungeegum/: bungeegum.hpp  bungeegum_widgets.hpp
bungeegum/include/bungeegum/advanced/: draw.fwd  draw.hpp  draw.inl  interact.fwd  interact.hpp  interact.inl  resolve.fwd  resolve.hpp  resolve.inl
bungeegum/include/bungeegum/backend/: common.fwd  common.hpp  embed.hpp  embed.inl  embedded.fwd  embedded.hpp  embedded.inl  launch.hpp  launch.inl  standalone.fwd  standalone.hpp  standalone.inl
bungeegum/include/bungeegum/context/: animation.hpp  animation.inl  context.fwd  draw.fwd  draw.hpp  draw.inl  event.hpp  exceptions.hpp  interact.fwd  interact.hpp  interact.inl  resolve.fwd  resolve.hpp  resolve.inl  typed.fwd  widget.hpp  widget.inl
bungeegum/include/bungeegum/core/: access.fwd  animation.fwd  animation.hpp  animation.inl  context.fwd  context.hpp  draw.fwd  draw.hpp  event.fwd  event.hpp  event.inl  exceptions.fwd  exceptions.hpp  global.fwd  hotreload.hpp  interact.fwd  interact.hpp  log.fwd  overlay.fwd  property.hpp  property.inl  resolve.fwd  resolve.hpp  runtime.fwd  runtime.hpp  runtime.inl  widget.fwd  widget.hpp  widget.inl
bungeegum/include/bungeegum/glue/: archive.fwd  archive.hpp  archive.inl  backtrace.fwd  backtrace.hpp  catch.hpp  config.hpp  console.fwd  console.hpp  curve.hpp  detection.fwd  detection.hpp  foreach.fwd  foreach.hpp  foreach.inl  imguarded.fwd  imguarded.hpp  (+28 more)
bungeegum/source/advanced/: draw.cpp  interact.cpp  resolve.cpp
bungeegum/source/backend/: common.cpp  standalone.cpp
bungeegum/source/context/: animation.cpp  context.cpp  draw.cpp  event.cpp  exceptions.cpp  interact.cpp  resolve.cpp  widget.cpp
bungeegum/source/core/: animation.cpp  context.cpp  draw.cpp  event.cpp  exceptions.cpp  global.cpp  hotreload.cpp  interact.cpp  log.cpp  process.cpp  resolve.cpp  widget.cpp
bungeegum/source/glue/: backtrace.cpp  console.cpp  curve.cpp  imguarded.cpp  registry.cpp  reload.cpp  renderer.cpp  time.cpp  window.cpp
bungeegum/source/overlay/: hierarchy.cpp  hotswapper.cpp  inspector.cpp  overlay.cpp  profiler.cpp  report.cpp  wireframe.cpp
bungeegum/source/widget/: context.cpp  draw.cpp  interact.cpp  resolve.cpp  widget.cpp
bungeegum/source/widgets/: Align.cpp  ColoredBox.cpp  ConstrainedBox.cpp  Container.cpp  Flex.cpp  Offset.cpp  Padding.cpp  Title.cpp
bungeegum_widgets/: CMakeLists.txt  README.md
bungeegum_widgets/include/bungeegum_widgets/: bungeegum_widgets.hpp
bungeegum_widgets/source/core/: Alignment.cpp  BoxConstraints.cpp  Color.cpp  EdgeInsets.cpp  Offset.cpp  Rect.cpp  Size.cpp
bungeegum_widgets/source/misc/: Alignment.cpp  BoxConstraints.cpp  Color.cpp  EdgeInsets.cpp  Offset.cpp  Rect.cpp  Size.cpp
bungeegum_widgets/source/widgets/: Align.cpp  Center.cpp  ColoredBox.cpp  ConstrainedBox.cpp  Container.cpp  CustomSingleChildLayout.cpp  Flex.cpp  LimitedBox.cpp  Padding.cpp  SizedBox.cpp  StreamBuilder.cpp  Title.cpp
demo/: CMakeLists.txt
demo/source/: main.cpp  testclass.cpp  testclass.hpp
demo/source/swapped/: testclass.cpp  testclass.hpp
demo/static/: myfont.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.xml
examples/launch/: CMakeLists.txt  main.cpp
installer/: CMakeLists.txt
installer/source/: main.cpp
installer/source/glue/: cmake.cpp  cmake.hpp  doxygen.cpp  git.cpp  git.hpp
installer/source/tasks/: tasks.hpp
perf/: CMakeLists.txt
perf/source/: main.cpp
runtime/: CMakeLists.txt
runtime/include/: .gitignore
runtime/include/bungeegum/: bungeegum.hpp
runtime/source/backend/: backend.cpp  standalone.cpp
runtime/source/core/: animation.cpp  curve.cpp  draw.cpp  event.cpp  font.cpp  global.cpp  hotswap.cpp  interact.cpp  log.cpp  math.cpp  pipeline.cpp  process.cpp  resolve.cpp  runtime.cpp  shader.cpp  texture.cpp  widget.cpp
runtime/source/glue/: backtrace.cpp  console.cpp  dialog.cpp  hotswap.cpp  hotswap2.cpp  imguarded.cpp  imutil.cpp  regex.cpp  reload.cpp  renderer.cpp  renderer2.cpp  rendering.cpp  rendering2.cpp  serialize.cpp  string.cpp  theme.cpp  time.cpp  window.cpp
runtime/source/overlay/: build.cpp  hierarchy.cpp  hotswap.cpp  hotswapper.cpp  menu.cpp  output.cpp  profiler.cpp  profiling.cpp
runtime/static/: font_awesome.hpp
staticgui/: CMakeLists.txt
staticgui/include/staticgui/: staticgui.hpp  staticgui.inl
staticgui/source/: staticgui.cpp
staticgui/source/containers/: animations_registry.cpp  events_registry.cpp  widgets_registry.cpp
staticgui/source/context/: animation.cpp  context.cpp  draw.cpp  event.cpp  exceptions.cpp  resolve.cpp  widget.cpp
staticgui/source/glue/: any_function.cpp  backtrace.cpp  bspline.cpp  console.cpp  containers.cpp  curve.cpp  id.cpp  id_integer.cpp  imguarded.cpp  registry.cpp  renderer.cpp  simd.cpp  time.cpp  window.cpp
staticgui/source/impl/: context.cpp  event.cpp  layout.cpp  tools.cpp
staticgui/source/overlay/: hierarchy.cpp  inspector.cpp  overlay.cpp  profiler.cpp  report.cpp  wireframe.cpp
staticgui/source/state/: animation.cpp  animations_registry.cpp  context.cpp  context_state.cpp  draw.cpp  errors.cpp  event.cpp  events_registry.cpp  rendering.cpp  widget.cpp  widgets_registry.cpp
staticgui/source/utils/: draw.cpp  ecs.cpp  id.cpp
test/: CMakeLists.txt
test/source/: test_bungeegum.cpp  test_staticgui.cpp
test/source/glue/: test_constexpr.cpp  test_registry.cpp  test_simd.cpp  test_toolchain.cpp  test_typelist.cpp
widgets/: CMakeLists.txt
widgets/include/bungeegum_widgets/: bungeegum_widgets.hpp
widgets/source/core/: Alignment.cpp  BoxConstraints.cpp  Color.cpp  EdgeInsets.cpp  Offset.cpp  Rect.cpp  Size.cpp
widgets/source/widgets/: Align.cpp  AspectRatio.cpp  Center.cpp  ColoredBox.cpp  ConstrainedBox.cpp  Container.cpp  CustomSingleChildLayout.cpp  Flex.cpp  Image.cpp  LimitedBox.cpp  ListView.cpp  MouseRegion.cpp  Opacity.cpp  OverflowBox.cpp  Padding.cpp  RotatedBox.cpp  SizedBox.cpp  StreamBuilder.cpp  Title.cpp
(+513 files in other folders)
