cmake_minimum_required(VERSION 3.5)

project(bungeegum)

set(BUNGEEGUM_VERSION "v0.1.0-alpha")

option(BUNGEEGUM_BUILD_DOC "Build doxygen documentation" ON)
option(BUNGEEGUM_BUILD_WIDGETS "Build widgets library" ON)
if(BUNGEEGUM_BUILD_WIDGETS)
	option(BUNGEEGUM_BUILD_DEMO "Build demo executable" ON)
	option(BUNGEEGUM_BUILD_PERF "Build gbenchmark executable" ON)
	option(BUNGEEGUM_BUILD_TEST "Build gtest executable" ON)
endif()
option(BUNGEEGUM_ENABLE_BACKTRACE "Build stacktrace functionality to inspect the context where exceptions happen." ON)
option(BUNGEEGUM_ENABLE_HOTSWAP "Build selected user types so that they can be hotswapped on file save." ON)
option(BUNGEEGUM_ENABLE_OVERLAY "Build a GUI overlay above applications to facilitate development." ON)

message("\n___.                                                             ")
message("\\_ |__  __ __  ____    ____   ____   ____   ____  __ __  _____   ")
message(" | __ \\|  |  \\/    \\  / ___\\_/ __ \\_/ __ \\ / ___\\|  |  \\/     \\")
message(" | \\_\\ \\  |  /   |  \\/ /_/  >  ___/\\  ___// /_/  >  |  /  Y Y  \\")
message(" |___  /____/|___|  /\\___  / \\___  >\\___  >___  /|____/|__|_|  /")
message("     \\/           \\//_____/      \\/     \\/_____/             \\/")
message("                                                 ${BUNGEEGUM_VERSION}\n")
message("[bungeegum] system name = ${CMAKE_SYSTEM_NAME}\n")
message("[bungeegum] build doc = ${BUNGEEGUM_BUILD_DOC}")
message("[bungeegum] build widgets = ${BUNGEEGUM_BUILD_WIDGETS}")
message("[bungeegum] build demo = ${BUNGEEGUM_BUILD_DEMO}")
message("[bungeegum] build perf = ${BUNGEEGUM_BUILD_PERF}")
message("[bungeegum] build test = ${BUNGEEGUM_BUILD_TEST}\n")
message("[bungeegum] enable backtrace = ${BUNGEEGUM_ENABLE_BACKTRACE}")
message("[bungeegum] enable hotswap = ${BUNGEEGUM_ENABLE_HOTSWAP}")
message("[bungeegum] enable overlay = ${BUNGEEGUM_ENABLE_OVERLAY}")
message("\n")

add_subdirectory("external")
add_subdirectory("runtime")
if(BUNGEEGUM_BUILD_DOC)
	add_subdirectory("doc")
endif()
if(BUNGEEGUM_BUILD_WIDGETS)
	add_subdirectory("widgets")
	if(BUNGEEGUM_BUILD_DEMO)
		add_subdirectory("demo")
	endif()
	if(BUNGEEGUM_BUILD_PERF)
		add_subdirectory("perf")
	endif()
	if(BUNGEEGUM_BUILD_TEST)
		add_subdirectory("test")
	endif()
endif()
